Fixed slider overflow

--- a/inc/css/flexslider.css
+++ b/inc/css/flexslider.css
@@ -39,7 +39,7 @@ html[xmlns] .slides {display: block;}
 
 /* FlexSlider Default Theme
 *********************************/
-.flexslider { margin: 0; background: #fff; border: 4px solid #fff; position: relative; }
+.flexslider { margin: 0; background: #fff; border: 4px solid #fff; position: relative; overflow: hidden; }
 .flex-viewport { max-height: 2000px; -webkit-transition: all 1s ease; -moz-transition: all 1s ease; -o-transition: all 1s ease; transition: all 1s ease; }
 .loading .flex-viewport { max-height: 300px; }
 .flexslider .slides { zoom: 1; }
